Fix spacing

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+/* * {
+  height: 100%;
+} */
+
 html {
   height: 100vh;
 }
